# sting

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yaml  test-package.yml
src/sting/: errors.py  gradient_descent.py  outputs.py  stream_lines_grad.py
tests/: test_errors.py  test_extract_streamline.py  test_gradient_descent.py  test_outputs.py  test_stream_lines_grad.py
