[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "numpy==2.5.0",
    "astropy==8.0.0",
    "jax==0.10.2",
    "optax==0.2.8",
    "matplotlib==3.11.0",
    "pandas==3.0.3",
    "spectral_cube==0.6.7"
]
name = "sting_astro"
requires-python = ">=3.12"
authors = [{ name="Lauren Mason", email="lmason@mpe.mpg.de" }]
maintainers = [{ name="Lauren Mason", email="lmason@mpe.mpg.de" }]
description = "STreamer INfall with Gradients"
readme = "README.md"
license = { text = "MIT Licence" }
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools_scm]
version_file = "src/sting/_version.py"

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = ["--ignore=src/sting/_version.py"]

[project.urls]
Homepage = "https://github.com/Lauren4476/STING"
Issues = "https://github.com/Lauren4476/STING/issues"